
\name{NEWS}
\title{NEWS file for the \pkg{mvtnorm} package}

\section{Changes in Version 1.3-4 (2025-08-14)}{
  \subsection{Features}{
    \itemize{
      \item \code{mvnorm} gains a \code{invcholmean} argument allowing a
             parameterisation leading to convex optimisation problems.
    }
  }
  \subsection{Bugfixes}{
    \itemize{
      \item \code{condDist()} sometimes failed to return a 
            \code{scale} slot.
    }
  }
}

\section{Changes in Version 1.3-3 (2025-01-09)}{
  \subsection{Bugfixes}{
    \itemize{
      \item \code{Miwa(steps = 4097)} are allowed in R, the
            C code assumed \code{steps <= 4096}, now 
            \code{steps == 4097} is possible. Triggered by
            BDR's gcc-UBSAN check on package 
            OptimalGoldstandardDesign.
    }
  }
}


\section{Changes in Version 1.3-2 (2024-11-04)}{
  \subsection{Features}{
    \itemize{
      \item Explain and illustrate that omitting data dimensions produces marginal
            log-likelihoods in Chapter 7.
      \item Add low-level functionality for reduced rank covariances in new
            Chapter 8.
    }
  }
  \subsection{Bugfixes}{
    \itemize{
      \item \code{invcholD} and \code{Dchol} avoided very small diagonals;
            now they also avoid very large diagonals (such that inverting the result
            doesn't give too small diagonals).
      \item Fix partial argument matches, reported by KH.
    }
  }
}

\section{Changes in Version 1.3-1 (2024-09-02)}{
  \subsection{Bugfixes}{
    \itemize{
      \item Challenging numeric test of score function at ML estimate
            failed on Mac M1.
    }
  }
}


\section{Changes in Version 1.2-6 (2024-08-17)}{
  \subsection{Features}{
    \itemize{
      \item Add \code{logdet()} function for computing log-determinants from
            lower triangular matrices.
      \item Speed up \code{solve(<ltMatrices>, ...)}.
    }
  }
  \subsection{Bugfixes}{
    \itemize{