@@ -33,39 +33,39 @@
 > (lxn <- ltMatrices(xn, byrow = TRUE, names = nm))
 , , C_1
 
-        A      B       C      D E
-A 1.00000 0.0000 0.00000 0.0000 0
-B 0.51237 1.0000 0.00000 0.0000 0
-C 0.05847 0.9095 1.00000 0.0000 0
-D 0.39449 0.6612 0.23353 1.0000 0
-E 0.51648 0.2980 0.07518 0.8182 1
+          A         B         C         D         E
+A 1.0000000         .         .         .         .
+B 0.5123660 1.0000000         .         .         .
+C 0.0584725 0.9095137 1.0000000         .         .
+D 0.3944872 0.6612143 0.2335259 1.0000000         .
+E 0.5164752 0.2979867 0.0751775 0.8182123 1.0000000
 
 , , C_2
 
-       A      B      C      D E
-A 1.0000 0.0000 0.0000 0.0000 0
-B 0.8591 1.0000 0.0000 0.0000 0
-C 0.3744 0.1023 1.0000 0.0000 0
-D 0.1165 0.7957 0.8931 1.0000 0
-E 0.1948 0.4730 0.2378 0.2146 1
+          A         B         C         D         E
+A 1.0000000         .         .         .         .
+B 0.8590665 1.0000000         .         .         .
+C 0.3744315 0.1022684 1.0000000         .         .
+D 0.1165248 0.7956529 0.8930589 1.0000000         .
+E 0.1948049 0.4730419 0.2377852 0.2146060 1.0000000
 
 , , C_3
 
-       A      B      C      D E
-A 1.0000 0.0000 0.0000 0.0000 0
-B 0.4530 1.0000 0.0000 0.0000 0
-C 0.9046 0.9270 1.0000 0.0000 0
-D 0.4490 0.1326 0.4154 1.0000 0
-E 0.9575 0.4917 0.7161 0.2938 1
+          A         B         C         D         E
+A 1.0000000         .         .         .         .
+B 0.4530153 1.0000000         .         .         .
+C 0.9045608 0.9269936 1.0000000         .         .
+D 0.4490011 0.1326375 0.4153967 1.0000000         .
+E 0.9574833 0.4917481 0.7160702 0.2938002 1.0000000
 
 , , C_4
 
-          A      B        C      D E
-A 1.0000000 0.0000 0.000000 0.0000 0
-B 0.4877241 1.0000 0.000000 0.0000 0
-C 0.0593046 0.7625 1.000000 0.0000 0
-D 0.0005227 0.1996 0.470509 1.0000 0
-E 0.4913541 0.2849 0.005961 0.8901 1
+          A         B         C         D         E
+A 1.0000000         .         .         .         .
+B 0.4877241 1.0000000         .         .         .
+C 0.0593046 0.7625270 1.0000000         .         .
+D 0.0005227 0.1995700 0.4705089 1.0000000         .
+E 0.4913541 0.2849431 0.0059611 0.8901458 1.0000000
 
 
 > dim(lxn)
@@ -426,11 +426,11 @@ Error in `[.ltMatrices`(ltM, i, j) : invalid subset argument j
 , , 1
 
   1 2 3 4 5
-1 1 0 0 0 0
-2 0 1 0 0 0
-3 0 0 1 0 0
-4 0 0 0 1 0
-5 0 0 0 0 1
+1 1 . . . .
+2 . 1 . . .
+3 . . 1 . .
+4 . . . 1 .
+5 . . . . 1
 
 
 > diagonals(I5) <- 1:5
@@ -439,11 +439,11 @@ Error in `[.ltMatrices`(ltM, i, j) : invalid subset argument j
 , , 1
 
   1 2 3 4 5
-1 1 0 0 0 0
-2 0 2 0 0 0
-3 0 0 3 0 0
-4 0 0 0 4 0
-5 0 0 0 0 5
+1 1 . . . .
+2 . 2 . . .
+3 . . 3 . .
+4 . . . 4 .
+5 . . . . 5
 
 
 > lxn <- ltMatrices(xn, byrow = TRUE)
@@ -1265,11 +1265,11 @@ attr(,"rcnames")
 > ltMatrices(op$par, diag = TRUE, byrow = BYROW)
 , , 1
 
-        1        2      3      4
-1 0.68306  0.00000 0.0000 0.0000
-2 0.26505  0.93465 0.0000 0.0000
-3 0.50102 -0.04587 1.0523 0.0000
-4 0.02356  0.89535 0.1048 0.9054
+         1        2        3        4
+1  0.68306        .        .        .
+2  0.26505  0.93465        .        .
+3  0.50102 -0.04587  1.05234        .
+4  0.02356  0.89535  0.10482  0.90544
 
 
 > ll(op$par)
@@ -1288,11 +1288,11 @@ attr(,"rcnames")
 > lt
 , , 1
 
-       1       2      3     4
-1 0.7071  0.0000 0.0000 0.000
-2 0.2500  0.9682 0.0000 0.000
-3 0.6124 -0.1581 1.0488 0.000
-4 0.0000  1.0954 0.1651 0.879
+        1       2       3       4
+1  0.7071       .       .       .
+2  0.2500  0.9682       .       .
+3  0.6124 -0.1581  1.0488       .
+4       .  1.0954  0.1651  0.8790
 
 
 > prb <- 1:9/10
@@ -1416,21 +1416,21 @@ attr(,"rcnames")
 +     diag = TRUE, byrow = BYROW))
 , , 1
 
-        1        2       3      4
-1 0.67050  0.00000 0.00000 0.0000
-2 0.26764  1.02232 0.00000 0.0000
-3 0.54268 -0.05007 1.11348 0.0000
-4 0.05223  0.98430 0.08473 0.9614
+         1        2        3        4
+1  0.67050        .        .        .
+2  0.26764  1.02232        .        .
+3  0.54268 -0.05007  1.11348        .
+4  0.05223  0.98430  0.08473  0.96137
 
 
 > lt
 , , 1
 
-       1       2      3     4
-1 0.7071  0.0000 0.0000 0.000
-2 0.2500  0.9682 0.0000 0.000
-3 0.6124 -0.1581 1.0488 0.000
-4 0.0000  1.0954 0.1651 0.879
+        1       2       3       4
+1  0.7071       .       .       .
+2  0.2500  0.9682       .       .
+3  0.6124 -0.1581  1.0488       .
+4       .  1.0954  0.1651  0.8790
 
 
 > op$par[1:J]
@@ -1551,21 +1551,21 @@ attr(,"rcnames")
 +     byrow = BYROW)
 , , 1
 
-        1        2       3      4
-1 0.68303  0.00000 0.00000 0.0000
-2 0.26504  0.93467 0.00000 0.0000
-3 0.53509 -0.05736 1.11261 0.0000
-4 0.06749  0.95887 0.07775 0.9669
+         1        2        3        4
+1  0.68303        .        .        .
+2  0.26504  0.93467        .        .
+3  0.53509 -0.05736  1.11261        .
+4  0.06749  0.95887  0.07775  0.96692
 
 
 > lt
 , , 1
 
-       1       2      3     4
-1 0.7071  0.0000 0.0000 0.000
-2 0.2500  0.9682 0.0000 0.000
-3 0.6124 -0.1581 1.0488 0.000
-4 0.0000  1.0954 0.1651 0.879
+        1       2       3       4
+1  0.7071       .       .       .
+2  0.2500  0.9682       .       .
+3  0.6124 -0.1581  1.0488       .
+4       .  1.0954  0.1651  0.8790
 
 
 > op$par[1:J]
@@ -1600,11 +1600,11 @@ attr(,"rcnames")
 +     byrow = BYROW)
 , , 1
 
-        1       2      3      4
-1 1.23596 0.00000 0.0000 0.0000
-2 0.05465 1.36452 0.0000 0.0000
-3 0.29576 0.02194 0.6153 0.0000
-4 0.07133 0.66705 0.2361 0.6619
+        1       2       3       4
+1 1.23596       .       .       .
+2 0.05465 1.36452       .       .
+3 0.29576 0.02194 0.61530       .
+4 0.07133 0.66705 0.23615 0.66185
 
 
 > round(as.array(aperm(as.chol(lt), perm = perm)), 4)
@@ -1633,26 +1633,26 @@ attr(,"rcnames")
 
 > J <- 4
 
-> Z <- t(qnorm(do.call("cbind", lapply(iris[1:J], rank))/(nrow(iris) + 
-+     1)))
+> Z <- t(qnorm(do.call("cbind", lapply(iris[1:J], rank, 
++     ties.method = "max"))/(nrow(iris) + 1)))
 
 > (CR <- cor(t(Z)))
              Sepal.Length Sepal.Width Petal.Length Petal.Width
-Sepal.Length      1.00000    -0.09887       0.8695      0.7819
-Sepal.Width      -0.09887     1.00000      -0.2710     -0.2414
-Petal.Length      0.86952    -0.27099       1.0000      0.8714
-Petal.Width       0.78191    -0.24142       0.8714      1.0000
+Sepal.Length      1.00000    -0.09064       0.8690      0.7695
+Sepal.Width      -0.09064     1.00000      -0.2446     -0.1908
+Petal.Length      0.86896    -0.24456       1.0000      0.8577
+Petal.Width       0.76951    -0.19082       0.8577      1.0000
 
 > ll <- function(parm) {
 +     C <- ltMatrices(parm)
-+     Cs <- standardize(C)
++     Cs <- standardize(chol = C)
 +     -ldmvnorm(obs = Z, chol = Cs)
 + }
 
 > sc <- function(parm) {
 +     C <- ltMatrices(parm)
-+     Cs <- standardize(C)
-+     -rowSums(Lower_tri(destandardize(chol = C, score_schol = sldmvno .... [TRUNCATED] 
++     Cs <- standardize(chol = C)
++     -rowSums(Lower_tri(destandardize(chol = C, score_schol =  .... [TRUNCATED] 
 
 > start <- t(chol(CR))
 
@@ -1665,9 +1665,9 @@ Petal.Width       0.78191    -0.24142       0.8714      1.0000
 +     control = list(trace = FALSE), hessian = TRUE)
 
 > op$value
-[1] 602.5
+[1] 605.5
 
-> S_ML <- chol2cov(standardize(ltMatrices(op$par)))
+> S_ML <- chol2cov(standardize(chol = ltMatrices(op$par)))
 
 > lwr <- do.call("cbind", lapply(iris[1:J], rank, ties.method = "min")) - 
 +     1
@@ -1688,14 +1688,13 @@ Petal.Width       0.78191    -0.24142       0.8714      1.0000
 
 > ll <- function(parm) {
 +     C <- ltMatrices(parm)
-+     Cs <- standardize(C)
-+     -lpmvnorm(lower = lwr, upper = upr, chol = Cs, M = M, w = W)
-+ }
++     Cs <- standardize(chol = C)
++     -lpmvnorm(lower = lwr, upper = upr, chol = Cs, M = M, w = .... [TRUNCATED] 
 
 > sc <- function(parm) {
 +     C <- ltMatrices(parm)
-+     Cs <- standardize(C)
-+     -rowSums(Lower_tri(destandardize(chol = C, score_schol = slpmvno .... [TRUNCATED] 
++     Cs <- standardize(chol = C)
++     -rowSums(Lower_tri(destandardize(chol = C, score_schol =  .... [TRUNCATED] 
 
 > if (require("numDeriv", quietly = TRUE)) chk(grad(ll, 
 +     start), sc(start), check.attributes = FALSE)
@@ -1703,16 +1702,16 @@ Petal.Width       0.78191    -0.24142       0.8714      1.0000
 > op2 <- optim(start, fn = ll, gr = sc, method = "BFGS", 
 +     control = list(trace = FALSE), hessian = TRUE)
 
-> S_NPML <- chol2cov(standardize(ltMatrices(op2$par)))
+> S_NPML <- chol2cov(standardize(chol = ltMatrices(op2$par)))
 
 > S_ML
 , , 1
 
         1       2       3       4
-1  1.0000 -0.1139  0.8768  0.7962
-2 -0.1139  1.0000 -0.2856 -0.2575
-3  0.8768 -0.2856  1.0000  0.8817
-4  0.7962 -0.2575  0.8817  1.0000
+1  1.0000 -0.1100  0.8797  0.7906
+2 -0.1100  1.0000 -0.2597 -0.1957
+3  0.8797 -0.2597  1.0000  0.8740
+4  0.7906 -0.1957  0.8740  1.0000
 
 
 > S_NPML
@@ -1721,8 +1720,8 @@ Petal.Width       0.78191    -0.24142       0.8714      1.0000
          1        2       3       4
 1  1.00000 -0.09786  0.8735  0.7833
 2 -0.09786  1.00000 -0.2726 -0.2482
-3  0.87346 -0.27260  1.0000  0.8849
-4  0.78328 -0.24822  0.8849  1.0000
+3  0.87346 -0.27261  1.0000  0.8849
+4  0.78328 -0.24823  0.8849  1.0000
 
 
 > sd_ML <- ltMatrices(sqrt(diag(solve(op$hessian))))
@@ -1738,19 +1737,19 @@ Petal.Width       0.78191    -0.24142       0.8714      1.0000
 + }
 , , 1
 
-        1       2     3 4
-1 0.00000 0.00000 0.000 0
-2 0.08122 0.00000 0.000 0
-3 0.13679 0.08762 0.000 0
-4 0.12621 0.10787 0.101 0
+        1       2       3 4
+1       .       .       . .
+2 0.08219       .       . .
+3 0.13663 0.08769       . .
+4 0.12316 0.10956 0.10266 .
 
 , , 1
 
-        1       2      3 4
-1 0.00000 0.00000 0.0000 0
-2 0.07731 0.00000 0.0000 0
-3 0.14000 0.08695 0.0000 0
-4 0.13691 0.11038 0.1161 0
+        1       2       3 4
+1       .       .       . .
+2 0.07731       .       . .
+3 0.14000 0.08695       . .
+4 0.13691 0.11038 0.11610 .
 
 
 > J <- 5
@@ -1838,7 +1837,7 @@ $scale
 , , 1
 
              Petal.Length Petal.Width
-Petal.Length       1.7594      0.0000
+Petal.Length       1.7594           .
 Petal.Width        0.7315      0.2051
 
 
@@ -1870,8 +1869,6 @@ attr(,"class")
 
 > obs <- t(iris[, vars])
 
-> lower <- upper <- NULL
-
 > ll <- function(parm) {
 +     C <- ltMatrices(parm[-(1:J)], diag = TRUE, names = vars)
 +     x <- mvnorm(mean = parm[1:J], chol = C)
@@ -1885,8 +1882,10 @@ attr(,"class")
 > start <- c(c(iris_mvn$mean), Lower_tri(iris_mvn$scale, 
 +     diag = TRUE))
 
-> max(abs(sc(start))) < sqrt(.Machine$double.eps)
-[1] TRUE
+> llim <- rep(-Inf, J + J * (J + 1)/2)
+
+> llim[J + c(diagonals(ltMatrices(seq_len(J * (J + 1)/2), 
++     diag = TRUE)))] <- 1e-04
 
 > op <- optim(start, fn = ll, gr = sc, method = "L-BFGS-B", 
 +     lower = llim, control = list(trace = FALSE))
@@ -1919,12 +1918,6 @@ Sepal.Length  Sepal.Width Petal.Length  Petal.Width
 > m
 Sepal.Length  Sepal.Width Petal.Length  Petal.Width 
        5.843        3.057        3.758        1.199 
-
-> J <- length(vars)
-
-> obs <- t(iris[, vars])
-
-> lower <- upper <- NULL
 
 > ll <- function(parm) {
 +     L <- ltMatrices(parm[-(1:J)], diag = TRUE, names = vars)
@@ -1976,11 +1969,11 @@ Sepal.Length  Sepal.Width Petal.Length  Petal.Width
 
 > v1 <- vars[1]
 
-> q1 <- quantile(iris[[v1]], probs = 1:9/10)
+> q1 <- quantile(iris[[v1]], probs = 1:4/5)
 
 > head(f1 <- cut(iris[[v1]], breaks = c(-Inf, q1, Inf)))
-[1] (5,5.27]   (4.8,5]    (-Inf,4.8] (-Inf,4.8] (4.8,5]    (5.27,5.6]
-10 Levels: (-Inf,4.8] (4.8,5] (5,5.27] (5.27,5.6] (5.6,5.8] ... (6.9, Inf]
+[1] (5,5.6]  (-Inf,5] (-Inf,5] (-Inf,5] (-Inf,5] (5,5.6] 
+Levels: (-Inf,5] (5,5.6] (5.6,6.1] (6.1,6.52] (6.52, Inf]
 
 > lower <- matrix(c(-Inf, q1)[f1], nrow = 1)
 
@@ -1990,7 +1983,17 @@ Sepal.Length  Sepal.Width Petal.Length  Petal.Width
 
 > obs <- obs[!rownames(obs) %in% v1, , drop = FALSE]
 
-> start <- opL$par + 0.1
+> ll <- function(parm) {
++     L <- ltMatrices(parm[-(1:J)], diag = TRUE, names = vars)
++     x <- mvnorm(invcholmean = parm[1:J], invchol = L)
++      .... [TRUNCATED] 
+
+> sc <- function(parm) {
++     L <- ltMatrices(parm[-(1:J)], diag = TRUE, names = vars)
++     x <- mvnorm(invcholmean = parm[1:J], invchol = L)
++      .... [TRUNCATED] 
+
+> start <- opL$par
 
 > if (require("numDeriv", quietly = TRUE)) chk(grad(ll, 
 +     start), sc(start), check.attributes = FALSE)
@@ -2007,10 +2010,10 @@ Sepal.Length  Sepal.Width Petal.Length  Petal.Width
 , , 1
 
              Sepal.Length Sepal.Width Petal.Length Petal.Width
-Sepal.Length       1.4873      0.1299       -3.369       1.297
-Sepal.Width        0.1299      5.2991        4.864      -2.610
-Petal.Length      -3.3690      4.8636       15.072      -9.823
-Petal.Width        1.2970     -2.6104       -9.823      37.394
+Sepal.Length      1.40888     0.07287       -3.085       0.806
+Sepal.Width       0.07287     5.29708        4.909      -2.190
+Petal.Length     -3.08540     4.90917       13.861      -7.633
+Petal.Width       0.80603    -2.19047       -7.633      33.383
 
 
 > chol2cov(ML$scale)
@@ -2025,7 +2028,7 @@ Petal.Width        1.4578     -2.3043       -9.960      45.708
 
 > MLi$mean[, , drop = TRUE]
 Sepal.Length  Sepal.Width Petal.Length  Petal.Width 
-       5.775        3.057        3.757        1.200 
+       5.760        3.057        3.758        1.199 
 
 > ML$mean[, , drop = TRUE]
 Sepal.Length  Sepal.Width Petal.Length  Petal.Width 
@@ -2171,4 +2174,4 @@ Sepal.Length  Sepal.Width Petal.Length  Petal.Width
  *** Run successfully completed ***
 > proc.time()
    user  system elapsed 
- 15.587   0.263  15.849 
+ 15.522   0.212  15.743 
